--- a/wallet.html
+++ b/wallet.html
@@ -1,71 +1,112 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfel</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Masterpass Wallet</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body {
-      background: url('https://masterpass.com/etc/designs/masterpass/clientlibs_base/img/homepage/homepage-hero-background.jpg') center/cover no-repeat;
-      animation: fadeBg 8s ease-in-out infinite alternate;
-    }
-    @keyframes fadeBg {0%{filter:brightness(1)}100%{filter:brightness(0.9)}}
-    .fade-in{animation:fadeIn 0.6s ease-out both;}
-    @keyframes fadeIn{from{opacity:0;transform:translateY(10px)}to{opacity:1;transform:translateY(0)}}
-  </style>
+  <link rel="icon" href="https://img.icons8.com/ios-filled/50/000000/mastercard-logo.png" />
 </head>
-<body class="flex items-center justify-center min-h-screen font-sans backdrop-blur-md">
-  <div class="bg-white/90 backdrop-blur-xl w-[480px] sm:w-[640px] rounded-2xl shadow-2xl p-6 fade-in">
-    <div class="flex justify-between items-center border-b pb-2">
-      <h1 class="text-lg font-semibold text-gray-700">Portfel Masterpass™</h1>
-      <button onclick="logout()" class="text-sm text-red-500 underline hover:text-red-700">Wyloguj się</button>
+<body class="bg-gray-100 min-h-screen font-sans text-gray-800">
+  <!-- Header -->
+  <header class="bg-white shadow-md p-4 flex items-center justify-between">
+    <div class="flex items-center space-x-2">
+      <img src="https://img.icons8.com/color/48/000000/mastercard-logo.png" class="w-8 h-8" />
+      <h1 class="text-lg font-semibold">masterpass <span class="text-xs text-gray-500">by mastercard</span></h1>
     </div>
-    <div class="mt-4 space-y-2">
-      <p class="text-sm text-gray-600">Użytkownik: <span id="userEmail" class="font-medium text-black"></span></p>
-      <p class="text-sm text-gray-600">Saldo: <span id="userBalance" class="font-bold text-green-600"></span> PLN</p>
+    <button id="logoutBtn" class="text-red-500 hover:underline text-sm">Wyloguj się</button>
+  </header>
+
+  <!-- Main -->
+  <main class="max-w-3xl mx-auto mt-8 p-4 bg-white shadow rounded">
+    <h2 class="text-xl font-semibold mb-4">Twój portfel</h2>
+
+    <!-- User Info -->
+    <div class="mb-6">
+      <p class="text-sm">Zalogowano jako: <span id="userEmail" class="font-medium"></span></p>
+      <p class="text-sm">Saldo: <span id="userBalance" class="font-semibold text-green-600"></span> PLN</p>
     </div>
-    <div class="mt-4">
-      <a href="card.html" class="block bg-orange-500 hover:bg-orange-600 text-white py-2 rounded text-center transition">Wypłać środki na kartę</a>
+
+    <!-- Orders / Activity -->
+    <div>
+      <h3 class="text-lg font-semibold mb-2">Historia transakcji</h3>
+      <table class="w-full text-sm table-auto border">
+        <thead class="bg-gray-200">
+          <tr>
+            <th class="p-2 text-left">Data</th>
+            <th class="p-2 text-left">Opis</th>
+            <th class="p-2 text-right">Kwota</th>
+          </tr>
+        </thead>
+        <tbody id="transactionTable">
+          <!-- Dynamically inserted rows -->
+        </tbody>
+      </table>
     </div>
-    <div class="mt-6">
-      <h2 class="font-semibold text-gray-700 mb-2">Ostatnie transakcje</h2>
-      <ul class="space-y-3">
-        <li class="flex justify-between items-center bg-gray-100 rounded p-3">
-          <div>
-            <p class="font-medium">+200 PLN</p>
-            <p class="text-xs text-gray-500">Telefon: +48 600 123 456</p>
-          </div>
-          <button class="text-blue-500 hover:underline">Szczegóły</button>
-        </li>
-        <li class="flex justify-between items-center bg-gray-100 rounded p-3">
-          <div>
-            <p class="font-medium">-50 PLN</p>
-            <p class="text-xs text-gray-500">Konto: PL12 3456 7890 1234 5678 9012</p>
-          </div>
-          <button class="text-blue-500 hover:underline">Zwróć</button>
-        </li>
-        <li class="flex justify-between items-center bg-gray-100 rounded p-3">
-          <div>
-            <p class="font-medium">-120 PLN</p>
-            <p class="text-xs text-gray-500">Telefon: +48 501 234 567</p>
-          </div>
-          <button class="text-blue-500 hover:underline">Zwróć</button>
-        </li>
-      </ul>
+
+    <!-- Actions -->
+    <div class="mt-6 flex gap-4">
+      <button id="addFunds" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">Dodaj środki</button>
+      <button id="makePayment" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Zrealizuj płatność</button>
     </div>
-  </div>
+  </main>
 
   <script>
-    const u = JSON.parse(localStorage.getItem('user'));
-    if (!u) return window.location.href = 'index.html';
+    const user = JSON.parse(localStorage.getItem('user')) || { email: 'nieznany', balance: '0.00' };
+    const transactionTable = document.getElementById('transactionTable');
 
-    document.getElementById('userEmail').textContent = u.email;
-    document.getElementById('userBalance').textContent = u.balance;
+    document.getElementById('userEmail').textContent = user.email;
+    document.getElementById('userBalance').textContent = parseFloat(user.balance).toFixed(2);
 
-    function logout(){
+    let balance = parseFloat(user.balance);
+    const transactions = [
+      { date: '2025-06-25', desc: 'Zakup w sklepie ABC', amount: -49.99 },
+      { date: '2025-06-22', desc: 'Zwrot środków', amount: 50.00 },
+      { date: '2025-06-20', desc: 'Doładowanie', amount: 100.00 }
+    ];
+
+    function renderTransactions() {
+      transactionTable.innerHTML = '';
+      transactions.forEach(tx => {
+        const row = document.createElement('tr');
+        row.innerHTML = `
+          <td class="p-2">${tx.date}</td>
+          <td class="p-2">${tx.desc}</td>
+          <td class="p-2 text-right ${tx.amount < 0 ? 'text-red-600' : 'text-green-600'}">
+            ${tx.amount < 0 ? '-' : '+'}${Math.abs(tx.amount).toFixed(2)} PLN
+          </td>`;
+        transactionTable.appendChild(row);
+      });
+    }
+
+    document.getElementById('addFunds').addEventListener('click', () => {
+      const amount = 50;
+      balance += amount;
+      transactions.unshift({ date: new Date().toISOString().slice(0, 10), desc: 'Doładowanie', amount });
+      localStorage.setItem('user', JSON.stringify({ ...user, balance: balance.toFixed(2) }));
+      document.getElementById('userBalance').textContent = balance.toFixed(2);
+      renderTransactions();
+    });
+
+    document.getElementById('makePayment').addEventListener('click', () => {
+      const amount = 30;
+      if (balance >= amount) {
+        balance -= amount;
+        transactions.unshift({ date: new Date().toISOString().slice(0, 10), desc: 'Płatność usługa XYZ', amount: -amount });
+        localStorage.setItem('user', JSON.stringify({ ...user, balance: balance.toFixed(2) }));
+        document.getElementById('userBalance').textContent = balance.toFixed(2);
+        renderTransactions();
+      } else {
+        alert('Niewystarczające środki!');
+      }
+    });
+
+    document.getElementById('logoutBtn').addEventListener('click', () => {
       localStorage.removeItem('user');
       window.location.href = 'index.html';
-    }
+    });
+
+    renderTransactions();
   </script>
 </body>
 </html>
