--- a/public/wallet.html
+++ b/public/wallet.html
@@ -3,110 +3,183 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Masterpass Wallet</title>
+  <title>Portfel Masterpass</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" href="https://img.icons8.com/ios-filled/50/000000/mastercard-logo.png" />
 </head>
 <body class="bg-gray-100 min-h-screen font-sans text-gray-800">
-  <!-- Header -->
-  <header class="bg-white shadow-md p-4 flex items-center justify-between">
-    <div class="flex items-center space-x-2">
-      <img src="https://img.icons8.com/color/48/000000/mastercard-logo.png" class="w-8 h-8" />
-      <h1 class="text-lg font-semibold">masterpass <span class="text-xs text-gray-500">by mastercard</span></h1>
-    </div>
-    <button id="logoutBtn" class="text-red-500 hover:underline text-sm">Wyloguj się</button>
-  </header>
-
-  <!-- Main -->
-  <main class="max-w-3xl mx-auto mt-8 p-4 bg-white shadow rounded">
-    <h2 class="text-xl font-semibold mb-4">Twój portfel</h2>
-
-    <!-- User Info -->
-    <div class="mb-6">
-      <p class="text-sm">Zalogowano jako: <span id="userEmail" class="font-medium"></span></p>
-      <p class="text-sm">Saldo: <span id="userBalance" class="font-semibold text-green-600"></span> PLN</p>
+  <div class="max-w-4xl mx-auto p-6">
+    <!-- Header -->
+    <div class="flex items-center justify-between mb-6">
+      <div class="flex items-center gap-3">
+        <img src="https://img.icons8.com/color/48/000000/mastercard-logo.png" class="w-10 h-10" />
+        <h1 class="text-2xl font-bold">Twój portfel Masterpass</h1>
+      </div>
+      <button
+        onclick="logout()"
+        class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 transition"
+      >
+        Wyloguj się
+      </button>
     </div>
 
-    <!-- Orders / Activity -->
-    <div>
-      <h3 class="text-lg font-semibold mb-2">Historia transakcji</h3>
-      <table class="w-full text-sm table-auto border">
-        <thead class="bg-gray-200">
-          <tr>
-            <th class="p-2 text-left">Data</th>
-            <th class="p-2 text-left">Opis</th>
-            <th class="p-2 text-right">Kwota</th>
-          </tr>
-        </thead>
-        <tbody id="transactionTable">
-          <!-- Dynamically inserted rows -->
-        </tbody>
-      </table>
+    <!-- Balance -->
+    <div class="bg-white rounded-lg shadow p-6 mb-6">
+      <div class="flex justify-between items-center">
+        <div>
+          <h2 class="text-xl font-semibold">Dostępne środki</h2>
+          <p id="balance" class="text-3xl font-bold mt-2 text-green-600">0.00 zł</p>
+        </div>
+        <div class="flex gap-3">
+          <button
+            onclick="openModal('add')"
+            class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition"
+          >
+            Zasil konto
+          </button>
+          <button
+            onclick="openModal('pay')"
+            class="bg-orange-500 text-white px-4 py-2 rounded hover:bg-orange-600 transition"
+          >
+            Zapłać
+          </button>
+        </div>
+      </div>
     </div>
 
-    <!-- Actions -->
-    <div class="mt-6 flex gap-4">
-      <button id="addFunds" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">Dodaj środki</button>
-      <button id="makePayment" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Zrealizuj płatność</button>
+    <!-- Transactions -->
+    <div class="bg-white rounded-lg shadow p-6">
+      <h2 class="text-xl font-semibold mb-4">Historia transakcji</h2>
+      <div class="overflow-x-auto">
+        <table class="min-w-full text-sm border">
+          <thead class="bg-gray-200 text-left">
+            <tr>
+              <th class="px-4 py-2 border">Numer</th>
+              <th class="px-4 py-2 border">Data</th>
+              <th class="px-4 py-2 border">Nazwa</th>
+              <th class="px-4 py-2 border">Kwota</th>
+              <th class="px-4 py-2 border">Status</th>
+              <th class="px-4 py-2 border">Metoda</th>
+            </tr>
+          </thead>
+          <tbody id="transactions" class="bg-white">
+            <!-- Transactions will render here -->
+          </tbody>
+        </table>
+      </div>
     </div>
-  </main>
+  </div>
+
+  <!-- Modal -->
+  <div
+    id="modal"
+    class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden"
+  >
+    <div class="bg-white rounded-lg shadow-lg p-6 w-full max-w-md relative">
+      <button
+        onclick="closeModal()"
+        class="absolute top-2 right-2 text-2xl text-gray-600 hover:text-black"
+      >
+        &times;
+      </button>
+      <div id="modalContent">
+        <!-- Content filled by JS -->
+      </div>
+    </div>
+  </div>
 
   <script>
-    const user = JSON.parse(localStorage.getItem('user')) || { email: 'nieznany', balance: '0.00' };
-    const transactionTable = document.getElementById('transactionTable');
+    const balanceEl = document.getElementById("balance");
+    const transactionsEl = document.getElementById("transactions");
+    const modal = document.getElementById("modal");
+    const modalContent = document.getElementById("modalContent");
 
-    document.getElementById('userEmail').textContent = user.email;
-    document.getElementById('userBalance').textContent = parseFloat(user.balance).toFixed(2);
+    const user = JSON.parse(localStorage.getItem("user")) || {
+      email: "demo@user.pl",
+      balance: "100.00",
+    };
 
-    let balance = parseFloat(user.balance);
     const transactions = [
-      { date: '2025-06-25', desc: 'Zakup w sklepie ABC', amount: -49.99 },
-      { date: '2025-06-22', desc: 'Zwrot środków', amount: 50.00 },
-      { date: '2025-06-20', desc: 'Doładowanie', amount: 100.00 }
+      {
+        id: "TXN001",
+        date: "2025-06-20",
+        name: "Sklep ABC",
+        amount: "-120.00 zł",
+        status: "Zakończona",
+        method: "Masterpass",
+      },
+      {
+        id: "TXN002",
+        date: "2025-06-18",
+        name: "Zasilenie konta",
+        amount: "+300.00 zł",
+        status: "Zakończona",
+        method: "Przelew",
+      },
+      {
+        id: "TXN003",
+        date: "2025-06-15",
+        name: "Zakupy Online",
+        amount: "-89.99 zł",
+        status: "Oczekująca",
+        method: "Masterpass",
+      },
     ];
 
-    function renderTransactions() {
-      transactionTable.innerHTML = '';
-      transactions.forEach(tx => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td class="p-2">${tx.date}</td>
-          <td class="p-2">${tx.desc}</td>
-          <td class="p-2 text-right ${tx.amount < 0 ? 'text-red-600' : 'text-green-600'}">
-            ${tx.amount < 0 ? '-' : '+'}${Math.abs(tx.amount).toFixed(2)} PLN
-          </td>`;
-        transactionTable.appendChild(row);
+    function render() {
+      balanceEl.textContent = parseFloat(user.balance).toFixed(2) + " zł";
+      transactionsEl.innerHTML = "";
+
+      transactions.forEach((tx) => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td class="px-4 py-2 border text-blue-600 underline cursor-pointer" onclick="showTx('${tx.id}')">${tx.id}</td>
+          <td class="px-4 py-2 border">${tx.date}</td>
+          <td class="px-4 py-2 border">${tx.name}</td>
+          <td class="px-4 py-2 border">${tx.amount}</td>
+          <td class="px-4 py-2 border">${tx.status}</td>
+          <td class="px-4 py-2 border">${tx.method}</td>
+        `;
+        transactionsEl.appendChild(tr);
       });
     }
 
-    document.getElementById('addFunds').addEventListener('click', () => {
-      const amount = 50;
-      balance += amount;
-      transactions.unshift({ date: new Date().toISOString().slice(0, 10), desc: 'Doładowanie', amount });
-      localStorage.setItem('user', JSON.stringify({ ...user, balance: balance.toFixed(2) }));
-      document.getElementById('userBalance').textContent = balance.toFixed(2);
-      renderTransactions();
-    });
+    function logout() {
+      localStorage.removeItem("user");
+      window.location.href = "index.html";
+    }
 
-    document.getElementById('makePayment').addEventListener('click', () => {
-      const amount = 30;
-      if (balance >= amount) {
-        balance -= amount;
-        transactions.unshift({ date: new Date().toISOString().slice(0, 10), desc: 'Płatność usługa XYZ', amount: -amount });
-        localStorage.setItem('user', JSON.stringify({ ...user, balance: balance.toFixed(2) }));
-        document.getElementById('userBalance').textContent = balance.toFixed(2);
-        renderTransactions();
-      } else {
-        alert('Niewystarczające środki!');
+    function openModal(type) {
+      modal.classList.remove("hidden");
+      if (type === "add") {
+        modalContent.innerHTML = `<h2 class="text-lg font-semibold">Zasil konto</h2><p class="mt-2 text-sm text-gray-600">Funkcja w budowie...</p>`;
+      } else if (type === "pay") {
+        modalContent.innerHTML = `<h2 class="text-lg font-semibold">Zapłać</h2><p class="mt-2 text-sm text-gray-600">Funkcja w budowie...</p>`;
       }
-    });
+    }
 
-    document.getElementById('logoutBtn').addEventListener('click', () => {
-      localStorage.removeItem('user');
-      window.location.href = 'index.html';
-    });
+    function showTx(id) {
+      const tx = transactions.find((t) => t.id === id);
+      if (!tx) return;
+      modal.classList.remove("hidden");
+      modalContent.innerHTML = `
+        <h2 class="text-lg font-semibold mb-2">Szczegóły transakcji</h2>
+        <ul class="text-sm space-y-1">
+          <li><strong>Numer:</strong> ${tx.id}</li>
+          <li><strong>Data:</strong> ${tx.date}</li>
+          <li><strong>Nazwa:</strong> ${tx.name}</li>
+          <li><strong>Kwota:</strong> ${tx.amount}</li>
+          <li><strong>Status:</strong> ${tx.status}</li>
+          <li><strong>Metoda:</strong> ${tx.method}</li>
+        </ul>
+      `;
+    }
 
-    renderTransactions();
+    function closeModal() {
+      modal.classList.add("hidden");
+    }
+
+    render();
   </script>
 </body>
 </html>
